Penyesuaian Bab 2 dan 3

--- a/200-bab-2-tinjauan-pustaka.tex
+++ b/200-bab-2-tinjauan-pustaka.tex
@@ -6,101 +6,147 @@
 \setcounter{figure}{0} 
 \setcounter{table}{0}
 
-\section{Tata Kelola Pemerintahan yang Baik (Good Governance)}
+\section{Latar Belakang Penyusunan SOP Administrasi Pemerintahan}
 
-Tata kelola pemerintahan yang baik (\textit{good governance}) merupakan prinsip
-penyelenggaraan pemerintahan yang menekankan pada terselenggaranya pemerintahan
-yang transparan, akuntabel, efektif, efisien, serta berorientasi pada kepentingan
-masyarakat. Prinsip ini menjadi landasan utama dalam penyelenggaraan pemerintahan
-dan pelayanan publik guna mewujudkan kepercayaan masyarakat terhadap pemerintah
-serta menjamin tercapainya tujuan pembangunan nasional dan daerah.
+Tujuan kebijakan Reformasi Birokrasi di Indonesia adalah untuk membangun profil
+dan perilaku aparatur negara yang memiliki integritas, produktivitas, dan
+bertanggung jawab serta memiliki kemampuan memberikan pelayanan yang prima
+melalui perubahan pola pikir (\textit{mind set}) dan budaya kerja (\textit{culture set})
+dalam sistem manajemen pemerintahan.
 
-Dalam penyelenggaraan pemerintahan daerah, penerapan prinsip \textit{good governance}
-menuntut adanya kejelasan peran, tugas, dan fungsi setiap perangkat daerah, serta
-kepastian mekanisme dan prosedur kerja yang dijalankan oleh aparatur. Setiap proses
-kerja harus dilaksanakan secara terstruktur, terukur, dan konsisten agar tidak terjadi
-tumpang tindih kewenangan maupun ketidakteraturan dalam pelaksanaan tugas.
+Reformasi Birokrasi mencakup delapan area perubahan utama pada instansi
+pemerintah di pusat dan daerah, meliputi organisasi, tata laksana, peraturan
+perundang-undangan, sumber daya manusia aparatur, pengawasan, akuntabilitas,
+pelayanan publik, serta perubahan pola pikir dan budaya kerja aparatur.
 
-Oleh karena itu, diperlukan suatu pedoman kerja yang jelas dan baku sebagai acuan
-bagi aparatur dalam melaksanakan tugas dan fungsinya. Pedoman kerja tersebut
-diharapkan mampu mendukung terciptanya keseragaman pelaksanaan tugas,
-meningkatkan kepastian pelayanan, serta memperkuat akuntabilitas penyelenggaraan
-pemerintahan daerah.
+Pada hakikatnya perubahan ketatalaksanaan diarahkan untuk melakukan penataan
+tata laksana instansi pemerintah yang efektif dan efisien. Salah satu upaya penataan
+tata laksana diwujudkan dalam bentuk penyusunan dan implementasi Standar
+Operasional Prosedur Administrasi Pemerintahan (SOP AP) dalam pelaksanaan tugas
+dan fungsi aparatur pemerintah.
 
-\section{Standar Operasional Prosedur (SOP)}
+\section{Pengertian Standar Operasional Prosedur Administrasi Pemerintahan}
 
-Standar Operasional Prosedur (SOP) merupakan serangkaian instruksi tertulis yang
-dibakukan mengenai berbagai proses penyelenggaraan kegiatan pemerintahan yang
-berisi tahapan, alur, dan mekanisme kerja yang harus dilaksanakan secara sistematis
-dan berurutan. SOP disusun untuk memastikan bahwa setiap aktivitas kerja
-dilaksanakan sesuai dengan ketentuan yang berlaku dan standar yang telah ditetapkan.
+Standar Operasional Prosedur adalah serangkaian instruksi tertulis yang dibakukan
+mengenai berbagai proses penyelenggaraan aktivitas organisasi, bagaimana dan
+kapan harus dilakukan, di mana dan oleh siapa dilakukan.
 
-SOP berfungsi sebagai pedoman operasional bagi aparatur pemerintah dalam
-melaksanakan tugas dan fungsi organisasi. Melalui SOP, setiap pelaksana memiliki
-pemahaman yang sama mengenai prosedur kerja, mulai dari tahapan awal hingga
-penyelesaian suatu kegiatan. Hal ini penting untuk menghindari perbedaan
-penafsiran, kesalahan prosedur, serta ketidakkonsistenan dalam pelaksanaan tugas.
+Standar Operasional Prosedur Administrasi Pemerintahan (SOP AP) adalah standar
+operasional prosedur dari berbagai proses penyelenggaraan administrasi
+pemerintahan yang sesuai dengan peraturan perundang-undangan yang berlaku.
 
-Selain itu, SOP juga berperan sebagai instrumen pengendalian internal yang
-mendukung terciptanya kepastian hukum dan tertib administrasi pemerintahan. SOP
-yang tersusun dengan baik akan memudahkan proses monitoring, evaluasi, dan
-perbaikan berkelanjutan terhadap kinerja organisasi pemerintahan.
+Administrasi pemerintahan adalah pengelolaan proses pelaksanaan tugas dan fungsi
+pemerintahan yang dijalankan oleh organisasi pemerintah.
 
-\section{Fungsi dan Manfaat SOP dalam Penyelenggaraan Pemerintahan}
+\section{Manfaat Standar Operasional Prosedur Administrasi Pemerintahan}
 
-Dalam penyelenggaraan pemerintahan, SOP memiliki fungsi yang strategis sebagai
-pedoman kerja resmi bagi aparatur, alat standarisasi proses, serta sarana untuk
-menjamin konsistensi pelaksanaan tugas dan pelayanan. SOP memastikan bahwa
-setiap kegiatan dilaksanakan sesuai dengan kewenangan, tanggung jawab, dan
-ketentuan yang telah ditetapkan.
+Manfaat penyusunan dan penerapan SOP Administrasi Pemerintahan antara lain
+sebagai standarisasi cara yang dilakukan aparatur dalam menyelesaikan pekerjaan
+yang menjadi tugasnya, mengurangi tingkat kesalahan dan kelalaian yang mungkin
+dilakukan oleh aparatur dalam melaksanakan tugas, serta meningkatkan efisiensi
+dan efektivitas pelaksanaan tugas dan tanggung jawab aparatur dan organisasi
+secara keseluruhan.
 
-Penerapan SOP memberikan manfaat dalam meningkatkan efektivitas dan efisiensi
-kerja aparatur, karena setiap tahapan pekerjaan telah dirumuskan secara jelas dan
-terukur. Dengan demikian, penggunaan sumber daya dapat dioptimalkan dan waktu
-pelaksanaan pekerjaan dapat dikendalikan secara lebih baik.
+Selain itu, SOP Administrasi Pemerintahan dapat meningkatkan akuntabilitas
+pelaksanaan tugas, menciptakan ukuran standar kinerja, menjamin konsistensi
+pelayanan kepada masyarakat, serta memberikan perlindungan hukum bagi
+aparatur dari kemungkinan tuntutan hukum karena tuduhan melakukan
+penyimpangan.
 
-Selain itu, SOP juga berperan penting dalam meningkatkan kualitas pelayanan publik.
-Pelayanan yang dilaksanakan berdasarkan SOP akan memberikan kepastian
-prosedur, waktu, dan hasil pelayanan kepada masyarakat. Hal ini sejalan dengan
-upaya peningkatan kepuasan masyarakat serta penguatan kepercayaan publik
+\section{Prinsip Penyusunan dan Pelaksanaan SOP Administrasi Pemerintahan}
+
+Prinsip penyusunan SOP Administrasi Pemerintahan meliputi kemudahan dan
+kejelasan, efisiensi dan efektivitas, keselarasan, keterukuran, dinamis, berorientasi
+pada pengguna atau pihak yang dilayani, kepatuhan hukum, serta kepastian hukum.
+
+Prinsip pelaksanaan SOP Administrasi Pemerintahan meliputi konsistensi,
+komitmen, perbaikan berkelanjutan, mengikat, seluruh unsur memiliki peran
+penting, serta terdokumentasi dengan baik.
+
+\section{Jenis Standar Operasional Prosedur Administrasi Pemerintahan}
+
+Berdasarkan sifat kegiatannya, SOP Administrasi Pemerintahan terdiri atas SOP
+Teknis dan SOP Administratif. SOP Teknis merupakan prosedur standar yang sangat
+rinci dari kegiatan yang dilakukan oleh satu orang aparatur atau satu jabatan.
+Sementara itu, SOP Administratif merupakan prosedur standar yang bersifat umum
+dan tidak rinci dari kegiatan yang dilakukan oleh lebih dari satu aparatur atau
+jabatan.
+
+Berdasarkan cakupan dan besaran kegiatan, SOP Administrasi Pemerintahan
+dibedakan menjadi SOP Makro dan SOP Mikro. SOP Makro mencakup beberapa SOP
+Mikro yang membentuk satu rangkaian kegiatan, sedangkan SOP Mikro merupakan
+bagian dari SOP Makro.
+
+\section{Kedudukan SOP dalam Penataan Tata Laksana Pemerintahan}
+
+Standar Operasional Prosedur Administrasi Pemerintahan merupakan salah satu
+instrumen utama dalam penataan tata laksana pemerintahan. SOP AP berfungsi
+sebagai pedoman kerja yang membakukan proses penyelenggaraan administrasi
+pemerintahan agar dilaksanakan secara efektif, efisien, dan konsisten.
+
+Dalam konteks Reformasi Birokrasi, SOP AP berperan sebagai jembatan antara
+ketentuan peraturan perundang-undangan dengan praktik kerja aparatur. Dengan
+adanya SOP, pelaksanaan tugas tidak bergantung pada individu, tetapi pada sistem
+dan prosedur yang telah ditetapkan.
+
+\section{SOP sebagai Instrumen Akuntabilitas dan Perlindungan Hukum}
+
+SOP Administrasi Pemerintahan berfungsi sebagai instrumen akuntabilitas dalam
+pelaksanaan tugas dan fungsi aparatur pemerintah. SOP memberikan standar
+pelaksanaan kerja yang dapat digunakan sebagai dasar dalam pengukuran kinerja,
+monitoring, serta evaluasi pelaksanaan tugas.
+
+Selain itu, SOP AP juga memberikan perlindungan hukum bagi aparatur dalam
+melaksanakan tugasnya. Aparatur yang melaksanakan pekerjaan sesuai dengan
+SOP memiliki dasar yang jelas bahwa tindakan yang dilakukan telah sesuai dengan
+ketentuan dan prosedur yang berlaku, sehingga meminimalkan risiko kesalahan
+prosedural dan tuntutan hukum.
+
+\section{Peran SOP dalam Penyelenggaraan Pelayanan Publik}
+
+Dalam penyelenggaraan pelayanan publik, SOP Administrasi Pemerintahan
+berperan penting dalam memberikan kepastian prosedur, waktu, dan hasil
+pelayanan kepada masyarakat. SOP memastikan bahwa pelayanan dilaksanakan
+secara konsisten dan sesuai dengan standar yang telah ditetapkan.
+
+Penerapan SOP yang baik akan mendukung peningkatan kualitas pelayanan publik,
+meningkatkan kepuasan masyarakat, serta memperkuat kepercayaan publik
 terhadap kinerja pemerintah.
 
-\section{SOP dalam Kerangka Reformasi Birokrasi dan Sistem Pemerintahan Berbasis Elektronik}
+\section{Siklus Penyusunan SOP Administrasi Pemerintahan}
 
-Reformasi birokrasi merupakan upaya sistematis untuk mewujudkan pemerintahan
-yang bersih, efektif, efisien, dan melayani. Salah satu aspek penting dalam reformasi
-birokrasi adalah penataan dan penyederhanaan proses kerja pemerintahan agar lebih
-terstruktur dan terstandar. Dalam konteks ini, SOP menjadi instrumen utama yang
-digunakan untuk membakukan proses kerja di lingkungan pemerintahan.
+Penyusunan Standar Operasional Prosedur Administrasi Pemerintahan dilaksanakan
+melalui suatu siklus yang terstruktur dan berkesinambungan. Siklus ini menunjukkan
+bahwa SOP bukan merupakan dokumen yang bersifat statis, melainkan instrumen
+manajemen yang harus senantiasa disesuaikan dengan perkembangan kebijakan,
+organisasi, serta kebutuhan penyelenggaraan pemerintahan dan pelayanan publik.
 
-SOP berfungsi sebagai dasar dalam penyusunan dan penataan proses bisnis
-pemerintahan. Dengan adanya SOP, setiap proses kerja dapat dipetakan secara jelas
-dan menjadi landasan dalam perbaikan tata kelola organisasi. Hal ini mendukung
-terciptanya birokrasi yang profesional, adaptif, dan berorientasi pada hasil.
+Siklus penyusunan SOP Administrasi Pemerintahan meliputi tahapan persiapan,
+penilaian kebutuhan SOP, pengembangan SOP, penerapan SOP, serta monitoring
+dan evaluasi SOP. Setiap tahapan dalam siklus tersebut saling berkaitan dan
+bertujuan untuk memastikan bahwa SOP yang disusun relevan, aplikatif, dan dapat
+diterapkan secara konsisten.
 
-Dalam implementasi Sistem Pemerintahan Berbasis Elektronik (SPBE), SOP memiliki
-peran yang sangat penting sebagai acuan dalam digitalisasi proses kerja dan
-pelayanan publik. SOP yang terstandar dan terdokumentasi dengan baik akan
-memudahkan integrasi proses ke dalam sistem elektronik, serta memastikan bahwa
-pemanfaatan teknologi informasi tetap selaras dengan ketentuan, alur kerja, dan
-prinsip tata kelola pemerintahan yang baik.
+Tahap persiapan dan penilaian kebutuhan SOP bertujuan untuk mengidentifikasi
+proses administrasi pemerintahan yang memerlukan pembakuan prosedur serta
+menentukan SOP yang perlu disusun atau disempurnakan. Tahap pengembangan
+merupakan proses perumusan SOP secara sistematis berdasarkan hasil penilaian
+kebutuhan dan ketentuan peraturan perundang-undangan yang berlaku.
 
-\section{Penataan dan Penyusunan SOP di Pemerintah Daerah}
+Tahap penerapan SOP dilakukan dengan menggunakan SOP sebagai pedoman kerja
+resmi dalam pelaksanaan tugas dan fungsi aparatur. Selanjutnya, monitoring dan
+evaluasi SOP dilaksanakan untuk menilai tingkat kepatuhan, efektivitas, serta
+kesesuaian penerapan SOP, sekaligus sebagai dasar dalam melakukan perbaikan
+dan penyempurnaan SOP secara berkelanjutan.
 
-Penataan dan penyusunan SOP di lingkungan pemerintah daerah merupakan bagian
-dari upaya peningkatan kualitas tata kelola pemerintahan dan pelayanan publik. SOP
-perlu disusun secara komprehensif dengan memperhatikan tugas dan fungsi
-perangkat daerah, ketentuan peraturan perundang-undangan, serta kebutuhan
-organisasi dan masyarakat.
+Siklus penyusunan SOP Administrasi Pemerintahan menegaskan bahwa SOP
+merupakan instrumen yang bersifat dinamis dan memerlukan peninjauan secara
+berkala agar tetap mendukung peningkatan kualitas tata kelola pemerintahan dan
+pelayanan publik.
 
-SOP yang telah disusun perlu didokumentasikan secara sistematis, disosialisasikan
-kepada seluruh aparatur, serta dievaluasi dan disempurnakan secara berkala.
-Evaluasi dilakukan untuk memastikan bahwa SOP tetap relevan dengan
-perkembangan regulasi, kebijakan, dan dinamika penyelenggaraan pemerintahan.
-
-Bagi \textit{Pemerintah Kabupaten Cianjur}, penataan dan penyusunan SOP di seluruh
-perangkat daerah merupakan langkah strategis untuk memastikan bahwa setiap
-proses pemerintahan dan pelayanan publik berjalan secara terstandar, transparan,
-dan dapat dipertanggungjawabkan. Melalui penerapan SOP yang seragam dan
-konsisten, diharapkan kinerja organisasi pemerintahan daerah dapat meningkat serta
-tujuan penyelenggaraan pemerintahan daerah dapat dicapai secara optimal.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=10.45cm]{image/01-siklus-sop.png}
+    \caption{Siklus Penyusunan SOP Administrasi Pemerintahan}
+    \label{fig:bagan-alir}
+\end{figure}
