--- a/300-bab-3-metodologi-dan-mekanisme-pelaksanaan.tex
+++ b/300-bab-3-metodologi-dan-mekanisme-pelaksanaan.tex
@@ -7,90 +7,217 @@
 \setcounter{figure}{0} 
 \setcounter{table}{0}
 
-\section{Metodologi Pelaksanaan}
 
-Metodologi pelaksanaan kegiatan penyusunan dan penataan Standar Operasional
-Prosedur (SOP) disusun untuk memastikan bahwa proses pengumpulan data,
-analisis, dan penyusunan rekomendasi berjalan secara komprehensif, terstruktur,
-serta dapat dipertanggungjawabkan. Metodologi ini dirancang agar SOP yang
-dihasilkan dapat diimplementasikan secara efektif oleh seluruh perangkat daerah.
+Pelaksanaan kegiatan penyusunan dan penataan Standar Operasional Prosedur (SOP)
+di lingkungan Pemerintah Kabupaten Cianjur dilaksanakan dengan mengacu pada
+Pedoman Penyusunan Standar Operasional Prosedur Administrasi Pemerintahan
+sebagaimana diatur dalam Peraturan Menteri Pendayagunaan Aparatur Negara dan
+Reformasi Birokrasi Nomor 35 Tahun 2012.
 
-Pendekatan metodologis yang digunakan merupakan kombinasi pendekatan
-kualitatif dan kuantitatif. Pendekatan kualitatif dilakukan melalui analisis kondisi
-eksisting unit layanan, capaian kinerja, serta kesenjangan antara standar
-pelayanan yang seharusnya dengan praktik pelaksanaan di lapangan. Sementara
-itu, pendekatan kuantitatif digunakan untuk mendukung analisis berbasis data,
-khususnya yang berkaitan dengan capaian pelayanan dan persepsi masyarakat.
+Metode pelaksanaan disusun untuk memastikan bahwa proses penyusunan SOP
+dilaksanakan secara sistematis, terstruktur, dan sesuai dengan kondisi serta
+kebutuhan organisasi perangkat daerah. Metode ini mencakup penentuan lokasi
+pelaksanaan, fokus penyusunan, sumber data, serta tahapan penyusunan SOP
+yang meliputi pengumpulan data, pengorganisasian, dan pengembangan SOP.
 
-Kegiatan penyusunan SOP menggunakan instrumen yang disusun berdasarkan
-prinsip-prinsip pelayanan publik, standar pelayanan, serta pedoman teknis
-penyusunan SOP yang berlaku. Instrumen tersebut digunakan untuk memastikan
-keseragaman pendekatan dan konsistensi hasil pada seluruh perangkat daerah.
+\section{Lokasi Penyusunan}
 
-Dalam pelaksanaannya, penyusunan SOP bersumber pada tiga jenis data utama,
-yaitu sebagai berikut:
+Kegiatan penyusunan dan penataan Standar Operasional Prosedur (SOP)
+dilaksanakan di lingkungan Pemerintah Kabupaten Cianjur, meliputi seluruh
+perangkat daerah yang memiliki tugas dan fungsi dalam penyelenggaraan
+administrasi pemerintahan dan pelayanan publik.
+
+Pemilihan lokasi ini didasarkan pada kebutuhan Pemerintah Kabupaten Cianjur
+untuk memiliki SOP yang terstandar, terdokumentasi dengan baik, serta sesuai
+dengan karakteristik organisasi dan pelaksanaan tugas pada masing-masing
+perangkat daerah.
+
+\section{Fokus Penyusunan}
+
+Fokus penyusunan SOP diarahkan pada proses-proses administrasi pemerintahan
+dan pelayanan publik yang menjadi tugas dan fungsi perangkat daerah di
+lingkungan Pemerintah Kabupaten Cianjur. Penyusunan SOP dilakukan untuk
+membakukan proses kerja agar dapat dilaksanakan secara konsisten, efisien,
+dan akuntabel.
+
+Fokus penyusunan meliputi identifikasi kebutuhan SOP, penataan SOP yang telah
+ada, serta penyusunan SOP baru sesuai dengan perubahan kebijakan, struktur
+organisasi, dan kebutuhan pelayanan masyarakat.
+
+\subsection{Sumber Data}
+
+Sumber data yang digunakan dalam kegiatan penyusunan SOP terdiri atas data
+primer dan data sekunder sebagai berikut.
+
+\subsubsection*{Data Primer}
+
+Data primer merupakan data yang diperoleh secara langsung dari perangkat
+daerah di lingkungan Pemerintah Kabupaten Cianjur. Data primer diperoleh
+melalui:
 \begin{itemize}
-    \item \textbf{Data administratif}, yang diperoleh dari dokumen resmi unit layanan,
-    seperti standar pelayanan, SOP yang telah ada, maklumat pelayanan, Survei
-    Kepuasan Masyarakat (SKM), serta dokumen pendukung lainnya.
-    
-    \item \textbf{Data lapangan}, yang diperoleh melalui wawancara, diskusi, dan
-    verifikasi langsung terhadap kondisi aktual pelaksanaan pelayanan pada
-    masing-masing unit kerja.
-    
-    \item \textbf{Data persepsi masyarakat}, yang diperoleh melalui hasil survei
-    kepuasan masyarakat atau masukan pengguna layanan yang relevan dengan
-    jenis pelayanan yang diselenggarakan.
+    \item Wawancara dan diskusi dengan pejabat dan aparatur pelaksana
+    yang terlibat langsung dalam proses administrasi pemerintahan dan
+    pelayanan publik;
+    \item Klarifikasi dan verifikasi kondisi aktual pelaksanaan tugas dan fungsi
+    pada masing-masing perangkat daerah;
+    \item Hasil pembahasan dan asistensi dalam proses penyusunan SOP.
 \end{itemize}
 
-Metode pengumpulan data yang digunakan dalam kegiatan ini meliputi:
+\subsubsection*{Data Sekunder}
+
+Data sekunder merupakan data pendukung yang diperoleh dari dokumen resmi
+dan regulasi yang relevan dengan penyusunan SOP, antara lain:
 \begin{itemize}
-    \item Penelaahan dokumen kebijakan, regulasi, dan standar pelayanan.
-    \item Diskusi dan konsultasi teknis dengan perangkat daerah terkait.
-    \item Workshop dan desk pemetaan penyusunan SOP di lingkungan Pemerintah
-    Kabupaten Cianjur.
+    \item Peraturan perundang-undangan terkait penyelenggaraan administrasi
+    pemerintahan dan pelayanan publik;
+    \item Pedoman Penyusunan Standar Operasional Prosedur Administrasi
+    Pemerintahan;
+    \item Dokumen SOP yang telah dimiliki oleh perangkat daerah;
+    \item Dokumen pendukung lainnya yang berkaitan dengan tugas dan fungsi
+    organisasi.
 \end{itemize}
 
-\section{Mekanisme Pelaksanaan}
+\section{Metode Penyusunan}
 
-Mekanisme pelaksanaan kegiatan penyusunan dan penataan SOP dilaksanakan
-secara bertahap dan berkesinambungan untuk memastikan ketercapaian tujuan
-kegiatan. Tahapan pelaksanaan disusun secara berurutan sebagai berikut:
+Metode penyusunan SOP dilaksanakan dengan mengacu pada siklus penyusunan
+SOP Administrasi Pemerintahan, yang meliputi tahapan pengumpulan data,
+pengorganisasian, dan pengembangan SOP.
 
-\begin{enumerate}
-    \item \textbf{Tahap Persiapan}
+\subsection{Tahap Persiapan dan Perencanaan}
 
-    Tahap persiapan meliputi perencanaan kegiatan, pembentukan dan penyiapan
-    tim pelaksana, serta penyusunan rencana kerja dan jadwal pelaksanaan.
-    Pada tahap ini juga dilakukan koordinasi awal dengan perangkat daerah
-    untuk menyamakan pemahaman mengenai tujuan, ruang lingkup, dan
-    mekanisme penyusunan SOP.
+Tahap persiapan dan perencanaan merupakan tahapan awal dalam pelaksanaan
+penyusunan dan penataan Standar Operasional Prosedur (SOP) di lingkungan
+Pemerintah Kabupaten Cianjur. Tahap ini bertujuan untuk memastikan bahwa
+penyusunan SOP dilaksanakan secara terarah, sistematis, dan sesuai dengan
+ketentuan peraturan perundang-undangan.
 
-    \item \textbf{Tahap Pengumpulan Data}
+Pada tahap ini dilakukan identifikasi awal terhadap tugas dan fungsi perangkat
+daerah serta proses-proses administrasi pemerintahan dan pelayanan publik yang
+memerlukan pembakuan prosedur. Identifikasi dilakukan dengan mengacu pada
+dokumen perencanaan instansi, seperti visi dan misi, tujuan dan sasaran organisasi,
+rencana strategis, serta rencana kerja perangkat daerah, sehingga diperoleh
+gambaran menyeluruh mengenai aktivitas dan proses kerja yang dijalankan.
 
-    Tahap pengumpulan data dilaksanakan melalui inventarisasi SOP yang telah
-    ada, pengumpulan dokumen pendukung, serta penggalian informasi terkait
-    pelaksanaan tugas dan fungsi perangkat daerah. Data yang dikumpulkan
-    menjadi dasar dalam proses analisis dan penyusunan SOP.
+\subsubsection{Inventarisasi dan Identifikasi Kebutuhan SOP}
 
-    \item \textbf{Tahap Pengolahan dan Analisis Data}
+Inventarisasi dilakukan terhadap SOP yang telah dimiliki oleh perangkat daerah
+untuk mengetahui tingkat ketersediaan, kelengkapan, dan kesesuaiannya dengan
+ketentuan yang berlaku serta kondisi aktual pelaksanaan tugas. Kegiatan ini
+bertujuan untuk mengidentifikasi SOP yang masih relevan, SOP yang perlu
+disempurnakan, serta kebutuhan penyusunan SOP baru.
 
-    Tahap ini dilakukan untuk mengolah dan menganalisis data yang telah
-    dikumpulkan. Analisis difokuskan pada kesesuaian proses kerja dengan
-    ketentuan peraturan perundang-undangan, efektivitas pelaksanaan, serta
-    identifikasi kebutuhan penyusunan atau penyempurnaan SOP.
+Identifikasi kebutuhan SOP dilakukan dengan mempertimbangkan perubahan
+kebijakan, struktur organisasi, serta tuntutan peningkatan kualitas pelayanan
+publik di lingkungan Pemerintah Kabupaten Cianjur.
 
-    \item \textbf{Tahap Penyusunan Laporan dan Rekomendasi}
+\subsubsection{Pengumpulan Data}
 
-    Tahap penyusunan laporan dan rekomendasi dilakukan dengan merumuskan
-    hasil analisis ke dalam dokumen SOP yang terstandar. Pada tahap ini juga
-    disusun rekomendasi perbaikan proses kerja untuk meningkatkan kualitas
-    penyelenggaraan pelayanan dan pelaksanaan tugas pemerintahan.
+Pengumpulan data dilakukan sebagai dasar dalam penyusunan SOP dan meliputi
+pengumpulan data primer dan data sekunder. Data primer diperoleh melalui
+wawancara dan diskusi dengan pejabat dan aparatur yang terlibat langsung dalam
+pelaksanaan proses kerja, untuk memperoleh informasi mengenai tahapan kegiatan,
+tujuan proses, risiko yang melekat, serta kendala yang dihadapi dalam pelaksanaan
+tugas.
 
-    \item \textbf{Tahap Pemantauan Tindak Lanjut}
+Data sekunder diperoleh dari dokumen resmi, antara lain peraturan perundang-
+undangan, pedoman teknis penyusunan SOP, dokumen organisasi, rencana strategis,
+serta SOP yang telah tersedia pada masing-masing perangkat daerah.
 
-    Tahap pemantauan tindak lanjut dilaksanakan untuk memastikan bahwa SOP
-    yang telah disusun dapat diterapkan secara konsisten oleh perangkat daerah.
-    Pemantauan dilakukan sebagai bagian dari upaya perbaikan berkelanjutan
-    dalam penyelenggaraan pemerintahan dan pelayanan publik.
-\end{enumerate}
+\subsubsection{Pengorganisasian Informasi}
+
+Pengorganisasian informasi dilakukan setelah seluruh data dan informasi yang
+berkaitan dengan proses kerja terkumpul. Pada tahap ini dilakukan penataan dan
+pengelompokan informasi agar lebih sistematis, mudah dipahami, dan siap
+digunakan dalam proses penyusunan SOP.
+
+Pengorganisasian dilakukan berdasarkan proses atau aktivitas kerja, bukan
+berdasarkan unit organisasi, sehingga SOP yang disusun mencerminkan alur kerja
+yang utuh dan lintas fungsi. Pengelompokan informasi dilakukan secara sederhana
+dan praktis agar mudah diimplementasikan dalam pelaksanaan tugas sehari-hari.
+
+Dengan dilaksanakannya tahap persiapan dan perencanaan secara menyeluruh,
+diharapkan penyusunan SOP di lingkungan Pemerintah Kabupaten Cianjur dapat
+menghasilkan SOP yang sesuai dengan kebutuhan organisasi serta mendukung
+terwujudnya tata kelola pemerintahan yang tertib, efektif, dan akuntabel.
+
+\subsection{Tahap Pengembangan SOP}
+
+Tahap pengembangan SOP merupakan tahapan inti dalam siklus penyusunan Standar
+Operasional Prosedur Administrasi Pemerintahan sebagaimana diatur dalam
+Peraturan Menteri Pendayagunaan Aparatur Negara dan Reformasi Birokrasi Nomor
+35 Tahun 2012. Tahap ini dilaksanakan setelah seluruh kegiatan persiapan dan
+penilaian kebutuhan SOP selesai dilakukan.
+
+Tahap pengembangan SOP sekaligus merupakan tahap pelaksanaan kegiatan
+penyusunan SOP. Pada tahap ini dilakukan perumusan SOP berdasarkan hasil
+pengumpulan dan pengorganisasian data yang telah diperoleh pada tahap
+sebelumnya. Data dan informasi tersebut dianalisis untuk memastikan bahwa SOP
+yang disusun mencerminkan alur pelaksanaan tugas dan fungsi yang berlaku secara
+nyata di lingkungan Pemerintah Kabupaten Cianjur.
+
+Dalam tahap pengembangan, penyusunan SOP dilakukan dengan menguraikan setiap
+prosedur ke dalam tahapan kegiatan yang jelas, sistematis, dan berurutan. Setiap
+tahapan prosedur dirumuskan dengan memperhatikan tujuan kegiatan, pelaksana,
+alur kerja, serta hasil yang diharapkan. Penyusunan SOP dilakukan dengan mengacu
+pada ketentuan peraturan perundang-undangan yang berlaku dan kebijakan internal
+pemerintah daerah, sehingga SOP yang dihasilkan memiliki kepastian hukum dan
+dapat dipertanggungjawabkan.
+
+Selain perumusan prosedur, tahap pengembangan juga mencakup kegiatan
+pembahasan dan klarifikasi bersama perangkat daerah terkait. Pembahasan ini
+bertujuan untuk memperoleh kesepahaman mengenai substansi SOP, memastikan
+kejelasan setiap tahapan prosedur, serta menghindari terjadinya perbedaan
+penafsiran dalam pelaksanaan tugas dan pelayanan publik.
+
+Hasil dari tahap pengembangan SOP adalah tersusunnya dokumen Standar
+Operasional Prosedur Administrasi Pemerintahan yang lengkap, jelas, dan terstandar
+sesuai dengan pedoman penyusunan SOP, serta siap untuk diterapkan dalam
+penyelenggaraan administrasi pemerintahan dan pelayanan publik.
+
+\subsection{Tahap Penerapan SOP}
+
+Tahap penerapan SOP merupakan tahapan lanjutan setelah SOP selesai disusun dan
+ditetapkan. Tahap ini merupakan bagian dari siklus penyusunan SOP Administrasi
+Pemerintahan sebagaimana diatur dalam PermenPAN-RB Nomor 35 Tahun 2012,
+yang menekankan bahwa SOP yang telah disusun harus digunakan secara nyata
+dalam pelaksanaan tugas dan fungsi aparatur.
+
+Pada tahap penerapan, SOP yang telah disusun mulai diberlakukan dan dijadikan
+sebagai pedoman kerja resmi bagi aparatur di lingkungan Pemerintah Kabupaten
+Cianjur. Aparatur melaksanakan tugas dan pelayanan publik dengan mengacu pada
+SOP yang telah ditetapkan, sehingga pelaksanaan pekerjaan dilakukan secara
+tertib, konsisten, dan sesuai dengan prosedur yang baku.
+
+Penerapan SOP bertujuan untuk memastikan bahwa seluruh proses administrasi
+pemerintahan dan pelayanan publik dilaksanakan secara seragam dan terstandar,
+serta untuk meningkatkan kepastian prosedur, efisiensi kerja, dan akuntabilitas
+pelaksanaan tugas. Melalui penerapan SOP, diharapkan dapat terbangun budaya
+kerja aparatur yang berorientasi pada kepastian prosedur dan kualitas pelayanan.
+
+Dalam konteks Pemerintah Kabupaten Cianjur, tahap penerapan SOP juga diarahkan
+untuk mendukung peningkatan kinerja organisasi perangkat daerah serta
+peningkatan kualitas pelayanan kepada masyarakat, sesuai dengan prinsip tata
+kelola pemerintahan yang baik.
+
+\subsection{Tahap Monitoring dan Evaluasi SOP}
+
+Tahap monitoring dan evaluasi SOP merupakan tahapan akhir dalam siklus
+penyusunan SOP Administrasi Pemerintahan sebagaimana diatur dalam
+PermenPAN-RB Nomor 35 Tahun 2012. Tahap ini dilaksanakan untuk menilai
+efektivitas dan kesesuaian penerapan SOP yang telah ditetapkan.
+
+Monitoring SOP dilakukan untuk memastikan bahwa SOP diterapkan secara
+konsisten oleh aparatur sesuai dengan ketentuan yang telah ditetapkan. Kegiatan
+monitoring mencakup pengamatan terhadap pelaksanaan prosedur, kepatuhan
+aparatur, serta kesesuaian pelaksanaan tugas dengan SOP yang berlaku.
+
+Evaluasi SOP dilakukan untuk mengidentifikasi kendala, hambatan, serta potensi
+perbaikan dalam penerapan SOP. Evaluasi juga mempertimbangkan perubahan
+kebijakan, perubahan struktur organisasi, serta dinamika penyelenggaraan
+administrasi pemerintahan dan pelayanan publik di lingkungan Pemerintah
+Kabupaten Cianjur.
+
+Hasil monitoring dan evaluasi digunakan sebagai dasar dalam melakukan perbaikan
+dan penyempurnaan SOP secara berkelanjutan. Dengan demikian, SOP yang
+diterapkan tetap relevan, aplikatif, dan mampu mendukung peningkatan kualitas tata
+kelola pemerintahan dan pelayanan publik secara berkesinambungan.
