--- a/laporan-akhir.tex
+++ b/laporan-akhir.tex
@@ -19,8 +19,8 @@
 \usepackage{setspace}
 \usepackage{tabularx}
 \usepackage{titlesec}
-
-\setlength{\parindent}{0pt}
+\usepackage{booktabs}
+\usepackage[table]{xcolor}
 
 \setdefaultlanguage{indonesian}
 
@@ -95,6 +95,18 @@
 \newpage
 
 \input{300-bab-3-metodologi-dan-mekanisme-pelaksanaan.tex}
+
+\newpage
+
+\input{400-bab-4-pembahasan.tex}
+
+\input{401-rekapitulasi-sop-perangkat-daerah.tex}
+
+\input{402-daftar-sop-perangkat-daerah.tex}
+
+% \newpage
+
+% \input{bab-5-kesimpulan-dan-rekomendasi.tex}
 
 \newpage
 
